--- a/transform/unify.ipynb
+++ b/transform/unify.ipynb
@@ -17,42 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (3.8.2)\n",
-      "Requirement already satisfied: seaborn in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (0.13.2)\n",
-      "Requirement already satisfied: pandas in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (2.2.0)\n",
-      "Requirement already satisfied: numpy in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (1.26.4)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from matplotlib) (4.47.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from matplotlib) (1.4.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from matplotlib) (23.2)\n",
-      "Requirement already satisfied: pillow>=8 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from matplotlib) (10.2.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from matplotlib) (3.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from pandas) (2023.4)\n",
-      "Requirement already satisfied: six>=1.5 in /home/gmn/projects/MSPR-Big-Data-Business-Intelligence/venv/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %pip install matplotlib seaborn pandas numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -83,13 +57,7 @@
       "/tmp/ipykernel_14017/833307635.py:3: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_1995 = pd.read_csv(\"../extract/csv/1995_tour_1.csv\")\n",
       "/tmp/ipykernel_14017/833307635.py:4: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df_2002 = pd.read_csv(\"../extract/csv/2002_tour_1.csv\")\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  df_2002 = pd.read_csv(\"../extract/csv/2002_tour_1.csv\")\n",
       "/tmp/ipykernel_14017/833307635.py:5: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_2007 = pd.read_csv(\"../extract/csv/2007_tour_1.csv\")\n",
       "/tmp/ipykernel_14017/833307635.py:6: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
@@ -117,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -202,9 +170,8 @@
       "       'Code de la commune', 'Libellé de la commune', 'Code du b.vote',\n",
       "       'Inscrits', 'Abstentions', '% Abs/Ins',\n",
       "       ...\n",
-      "       'Unnamed: 95', 'Unnamed: 96', 'Unnamed: 97', 'Unnamed: 98',\n",
-      "       'Unnamed: 99', 'Unnamed: 100', 'Unnamed: 101', 'Unnamed: 102',\n",
-      "       'Unnamed: 103', 'Unnamed: 104'],\n",
+      "       'Voix.10', '% Voix/Ins.10', '% Voix/Exp.10', 'N°Panneau.11', 'Sexe.11',\n",
+      "       'Nom.11', 'Prénom.11', 'Voix.11', '% Voix/Ins.11', '% Voix/Exp.11'],\n",
       "      dtype='object', length=105)\n"
      ]
     }
