Add transform_1995 function and install pyarrow

--- a/transform/unify.ipynb
+++ b/transform/unify.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install matplotlib seaborn pandas numpy"
+    "# %pip install matplotlib seaborn pandas numpy pyarrow"
    ]
   },
   {
