Update clean_inflation.csv and elections_33_clean.csv

--- a/4-modeling/clean.ipynb
+++ b/4-modeling/clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "4         -0.6  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "4            78.293390  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -740,6 +740,488 @@
     "for col in df_final.columns:\n",
     "    print(col, df_final[col].dtype)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ajout inflation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_inflation = pd.read_csv('./clean_inflation.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Période</th>\n",
+       "      <th>Indice des prix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-03</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-02</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-12</td>\n",
+       "      <td>5.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-11</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Période  Indice des prix\n",
+       "0  2024-03              2.3\n",
+       "1  2024-02              3.6\n",
+       "2  2024-01              4.5\n",
+       "3  2023-12              5.9\n",
+       "4  2023-11              7.0"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_inflation.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the \"Période\" column to datetime format\n",
+    "df_inflation['Période'] = pd.to_datetime(df_inflation['Période'], format='%Y-%m')\n",
+    "\n",
+    "# Extract the year from the \"Période\" column\n",
+    "df_inflation['Year'] = df_inflation['Période'].dt.year\n",
+    "\n",
+    "# Group the data by 'Year' and calculate the mean of \"Indice des prix\"\n",
+    "mean_indice_by_year = df_inflation.groupby('Year')['Indice des prix'].mean().reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2024, 2023, 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014,\n",
+       "       2013, 2012], dtype=int32)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_inflation[\"Year\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill the 'Inflation' column with the mean inflation of the corresponding year\n",
+    "df_final['Inflation'] = None\n",
+    "\n",
+    "# If not available, do nothing\n",
+    "for year in df_inflation[\"Year\"].unique():\n",
+    "    inflation = mean_indice_by_year[mean_indice_by_year['Year'] == year]['Indice des prix'].values[0]\n",
+    "    df_final.loc[df_final['Annee'] == year, 'Inflation'] = inflation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Annee</th>\n",
+       "      <th>Code de la commune</th>\n",
+       "      <th>Libellé de la commune</th>\n",
+       "      <th>Inscrits</th>\n",
+       "      <th>Abstentions</th>\n",
+       "      <th>Votants</th>\n",
+       "      <th>Exprimés</th>\n",
+       "      <th>Blancs_et_nuls</th>\n",
+       "      <th>Sexe</th>\n",
+       "      <th>Nom Complet</th>\n",
+       "      <th>Voix</th>\n",
+       "      <th>Candidat_ID</th>\n",
+       "      <th>Orientation</th>\n",
+       "      <th>Pourcentage_Blancs_et_nuls</th>\n",
+       "      <th>Pourcentage_Abstentions</th>\n",
+       "      <th>Pourcentage_Votants</th>\n",
+       "      <th>Inflation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ABZAC</td>\n",
+       "      <td>1091</td>\n",
+       "      <td>195</td>\n",
+       "      <td>896</td>\n",
+       "      <td>860</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LE PEN J.MARIE</td>\n",
+       "      <td>143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>4.186047</td>\n",
+       "      <td>17.873511</td>\n",
+       "      <td>82.126489</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>2</td>\n",
+       "      <td>AILLAS</td>\n",
+       "      <td>530</td>\n",
+       "      <td>92</td>\n",
+       "      <td>438</td>\n",
+       "      <td>424</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LE PEN J.MARIE</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>3.301887</td>\n",
+       "      <td>17.358491</td>\n",
+       "      <td>82.641509</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>3</td>\n",
+       "      <td>AMBARES &amp; LAGRAVE</td>\n",
+       "      <td>6930</td>\n",
+       "      <td>1306</td>\n",
+       "      <td>5624</td>\n",
+       "      <td>5468</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LE PEN J.MARIE</td>\n",
+       "      <td>897</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>2.852963</td>\n",
+       "      <td>18.845599</td>\n",
+       "      <td>81.154401</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AMBES</td>\n",
+       "      <td>1834</td>\n",
+       "      <td>295</td>\n",
+       "      <td>1539</td>\n",
+       "      <td>1506</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LE PEN J.MARIE</td>\n",
+       "      <td>179</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>2.191235</td>\n",
+       "      <td>16.085060</td>\n",
+       "      <td>83.914940</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ANDERNOS LES BAINS</td>\n",
+       "      <td>6551</td>\n",
+       "      <td>1422</td>\n",
+       "      <td>5129</td>\n",
+       "      <td>4994</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LE PEN J.MARIE</td>\n",
+       "      <td>671</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>2.703244</td>\n",
+       "      <td>21.706610</td>\n",
+       "      <td>78.293390</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21671</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>554</td>\n",
+       "      <td>Yvrac</td>\n",
+       "      <td>1138</td>\n",
+       "      <td>197</td>\n",
+       "      <td>941</td>\n",
+       "      <td>924</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>POUTOU Philippe</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>17.311072</td>\n",
+       "      <td>82.688928</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21672</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>555</td>\n",
+       "      <td>Marcheprime</td>\n",
+       "      <td>1226</td>\n",
+       "      <td>250</td>\n",
+       "      <td>976</td>\n",
+       "      <td>953</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>POUTOU Philippe</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.391517</td>\n",
+       "      <td>79.608483</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21673</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>555</td>\n",
+       "      <td>Marcheprime</td>\n",
+       "      <td>1543</td>\n",
+       "      <td>292</td>\n",
+       "      <td>1251</td>\n",
+       "      <td>1213</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>POUTOU Philippe</td>\n",
+       "      <td>14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.924174</td>\n",
+       "      <td>81.075826</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21674</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>555</td>\n",
+       "      <td>Marcheprime</td>\n",
+       "      <td>895</td>\n",
+       "      <td>162</td>\n",
+       "      <td>733</td>\n",
+       "      <td>719</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>POUTOU Philippe</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.100559</td>\n",
+       "      <td>81.899441</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21675</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>555</td>\n",
+       "      <td>Marcheprime</td>\n",
+       "      <td>529</td>\n",
+       "      <td>101</td>\n",
+       "      <td>428</td>\n",
+       "      <td>420</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>POUTOU Philippe</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.092628</td>\n",
+       "      <td>80.907372</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21676 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Annee  Code de la commune Libellé de la commune  Inscrits  Abstentions  \\\n",
+       "0       1995                   1                 ABZAC      1091          195   \n",
+       "1       1995                   2                AILLAS       530           92   \n",
+       "2       1995                   3     AMBARES & LAGRAVE      6930         1306   \n",
+       "3       1995                   4                 AMBES      1834          295   \n",
+       "4       1995                   5    ANDERNOS LES BAINS      6551         1422   \n",
+       "...      ...                 ...                   ...       ...          ...   \n",
+       "21671   2022                 554                 Yvrac      1138          197   \n",
+       "21672   2022                 555           Marcheprime      1226          250   \n",
+       "21673   2022                 555           Marcheprime      1543          292   \n",
+       "21674   2022                 555           Marcheprime       895          162   \n",
+       "21675   2022                 555           Marcheprime       529          101   \n",
+       "\n",
+       "       Votants  Exprimés  Blancs_et_nuls Sexe      Nom Complet  Voix  \\\n",
+       "0          896       860            36.0    M   LE PEN J.MARIE   143   \n",
+       "1          438       424            14.0    M   LE PEN J.MARIE    36   \n",
+       "2         5624      5468           156.0    M   LE PEN J.MARIE   897   \n",
+       "3         1539      1506            33.0    M   LE PEN J.MARIE   179   \n",
+       "4         5129      4994           135.0    M   LE PEN J.MARIE   671   \n",
+       "...        ...       ...             ...  ...              ...   ...   \n",
+       "21671      941       924             0.0    M  POUTOU Philippe     7   \n",
+       "21672      976       953             0.0    M  POUTOU Philippe     9   \n",
+       "21673     1251      1213             0.0    M  POUTOU Philippe    14   \n",
+       "21674      733       719             0.0    M  POUTOU Philippe    13   \n",
+       "21675      428       420             0.0    M  POUTOU Philippe     9   \n",
+       "\n",
+       "       Candidat_ID  Orientation  Pourcentage_Blancs_et_nuls  \\\n",
+       "0                1         -0.6                    4.186047   \n",
+       "1                1         -0.6                    3.301887   \n",
+       "2                1         -0.6                    2.852963   \n",
+       "3                1         -0.6                    2.191235   \n",
+       "4                1         -0.6                    2.703244   \n",
+       "...            ...          ...                         ...   \n",
+       "21671           10          NaN                    0.000000   \n",
+       "21672           10          NaN                    0.000000   \n",
+       "21673           10          NaN                    0.000000   \n",
+       "21674           10          NaN                    0.000000   \n",
+       "21675           10          NaN                    0.000000   \n",
+       "\n",
+       "       Pourcentage_Abstentions  Pourcentage_Votants Inflation  \n",
+       "0                    17.873511            82.126489      None  \n",
+       "1                    17.358491            82.641509      None  \n",
+       "2                    18.845599            81.154401      None  \n",
+       "3                    16.085060            83.914940      None  \n",
+       "4                    21.706610            78.293390      None  \n",
+       "...                        ...                  ...       ...  \n",
+       "21671                17.311072            82.688928       6.1  \n",
+       "21672                20.391517            79.608483       6.1  \n",
+       "21673                18.924174            81.075826       6.1  \n",
+       "21674                18.100559            81.899441       6.1  \n",
+       "21675                19.092628            80.907372       6.1  \n",
+       "\n",
+       "[21676 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final"
+   ]
   }
  ],
  "metadata": {
@@ -758,7 +1240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
