Update elections_33_clean.csv with new file size

--- a/4-modeling/clean.ipynb
+++ b/4-modeling/clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['LE PEN J.MARIE', 'CHIRAC JACQUES', 'JOSPIN LIONEL',\n",
+       "       'VOYNET DOMINIQUE', 'LEPAGE CORINNE', 'LE PEN JEAN-MARIE',\n",
+       "       'BOUTIN CHRISTINE', 'MADELIN ALAIN', 'LAGUILLER ARLETTE',\n",
+       "       'BESANCENOT Olivier', 'BUFFET Marie-George', 'SCHIVARDI Gérard',\n",
+       "       'BAYROU François', 'BOVÉ José', 'de VILLIERS Philippe',\n",
+       "       'ROYAL Ségolène', 'NIHOUS Frédéric', 'LAGUILLER Arlette',\n",
+       "       'SARKOZY Nicolas', 'CHEMINADE Jacques', 'LE PEN Marine',\n",
+       "       'MACRON Emmanuel', 'MÉLENCHON Jean-Luc', 'FILLON François',\n",
+       "       'HAMON Benoît', 'LASSALLE Jean', 'DUPONT-AIGNAN Nicolas',\n",
+       "       'POUTOU Philippe', 'ASSELINEAU François', 'ARTHAUD Nathalie',\n",
+       "       'HIDALGO Anne'], dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final['Nom Complet'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,36 +341,36 @@
     "    'BOUTIN CHRISTINE': 0.6,  # Christian democracy\n",
     "    'MADELIN ALAIN': 0.6,  # Liberal conservatism\n",
     "    'LAGUILLER ARLETTE': -1.0,  # Far-left\n",
-    "    'BESANCENOT OLIVIER': -1.0,  # Far-left\n",
-    "    'BUFFET MARIE-GEORGE': -0.6,  # Left-wing\n",
-    "    'SCHIVARDI GÉRARD': 0.0,  # Centrist\n",
-    "    'BAYROU FRANÇOIS': 0.2,  # Center to center-right\n",
-    "    'BOVÉ JOSÉ': -0.6,  # Ecologist\n",
-    "    'DE VILLIERS PHILIPPE': 0.8,  # Right-wing\n",
-    "    'ROYAL SÉGOLÈNE': -0.4,  # Center-left\n",
-    "    'NIHOUS FRÉDÉRIC': 0.0,  # Centrist\n",
-    "    'LAGUILLER ARLETTE': -1.0,  # Far-left\n",
-    "    'SARKOZY NICOLAS': 0.6,  # Center-right\n",
-    "    'CHEMINADE JACQUES': -0.2,  # Center-left\n",
-    "    'LE PEN MARINE': -0.8,  # Far-right\n",
-    "    'MACRON EMMANUEL': 0.2,  # Center to center-right\n",
-    "    'MÉLENCHON JEAN-LUC': -0.8,  # Far-left\n",
-    "    'FILLON FRANÇOIS': 0.6,  # Center-right\n",
-    "    'HAMON BENOÎT': -0.4,  # Center-left\n",
-    "    'LASSALLE JEAN': 0.0,  # Centrist\n",
-    "    'DUPONT-AIGNAN NICOLAS': 0.4,  # Center-right\n",
-    "    'POUTOU PHILIPPE': -1.0,  # Far-left\n",
-    "    'ASSELINEAU FRANÇOIS': 0.0,  # Centrist\n",
-    "    'ARTHAUD NATHALIE': -1.0,  # Far-left\n",
-    "    'HIDALGO ANNE': -0.4,  # Center-left\n",
+    "    'BESANCENOT Olivier': -1.0,  # Far-left\n",
+    "    'BUFFET Marie-George': -0.6,  # Left-wing\n",
+    "    'SCHIVARDI Gérard': 0.0,  # Centrist\n",
+    "    'BAYROU François': 0.2,  # Center to center-right\n",
+    "    'BOVÉ José': -0.6,  # Ecologist\n",
+    "    'de VILLIERS Philippe': 0.8,  # Right-wing\n",
+    "    'ROYAL Ségolène': -0.4,  # Center-left\n",
+    "    'NIHOUS Frédéric': 0.0,  # Centrist\n",
+    "    'SARKOZY Nicolas': 0.6,  # Center-right\n",
+    "    'CHEMINADE Jacques': -0.2,  # Center-left\n",
+    "    'LE PEN Marine': -0.8,  # Far-right\n",
+    "    'MACRON Emmanuel': 0.2,  # Center to center-right\n",
+    "    'MÉLENCHON Jean-Luc': -0.8,  # Far-left\n",
+    "    'FILLON François': 0.6,  # Center-right\n",
+    "    'HAMON Benoît': -0.4,  # Center-left\n",
+    "    'LASSALLE Jean': 0.0,  # Centrist\n",
+    "    'DUPONT-AIGNAN Nicolas': 0.4,  # Center-right\n",
+    "    'POUTOU Philippe': -1.0,  # Far-left\n",
+    "    'ASSELINEAU François': 0.0,  # Centrist\n",
+    "    'ARTHAUD Nathalie': -1.0,  # Far-left\n",
+    "    'HIDALGO Anne': -0.4,  # Center-left\n",
     "}\n",
+    "\n",
     "\n",
     "df_final['Orientation'] = df_final['Nom Complet'].map(political_lean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +517,7 @@
        "4         -0.6  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +727,7 @@
        "4            78.293390  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +856,7 @@
        "4  2023-11              7.0"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +893,7 @@
        "       2013, 2012], dtype=int32)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1097,7 @@
        "      <td>POUTOU Philippe</td>\n",
        "      <td>7</td>\n",
        "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>17.311072</td>\n",
        "      <td>82.688928</td>\n",
@@ -1087,7 +1117,7 @@
        "      <td>POUTOU Philippe</td>\n",
        "      <td>9</td>\n",
        "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>20.391517</td>\n",
        "      <td>79.608483</td>\n",
@@ -1107,7 +1137,7 @@
        "      <td>POUTOU Philippe</td>\n",
        "      <td>14</td>\n",
        "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>18.924174</td>\n",
        "      <td>81.075826</td>\n",
@@ -1127,7 +1157,7 @@
        "      <td>POUTOU Philippe</td>\n",
        "      <td>13</td>\n",
        "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>18.100559</td>\n",
        "      <td>81.899441</td>\n",
@@ -1147,7 +1177,7 @@
        "      <td>POUTOU Philippe</td>\n",
        "      <td>9</td>\n",
        "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>19.092628</td>\n",
        "      <td>80.907372</td>\n",
@@ -1192,11 +1222,11 @@
        "3                1         -0.6                    2.191235   \n",
        "4                1         -0.6                    2.703244   \n",
        "...            ...          ...                         ...   \n",
-       "21671           10          NaN                    0.000000   \n",
-       "21672           10          NaN                    0.000000   \n",
-       "21673           10          NaN                    0.000000   \n",
-       "21674           10          NaN                    0.000000   \n",
-       "21675           10          NaN                    0.000000   \n",
+       "21671           10         -1.0                    0.000000   \n",
+       "21672           10         -1.0                    0.000000   \n",
+       "21673           10         -1.0                    0.000000   \n",
+       "21674           10         -1.0                    0.000000   \n",
+       "21675           10         -1.0                    0.000000   \n",
        "\n",
        "       Pourcentage_Abstentions  Pourcentage_Votants Inflation  \n",
        "0                    17.873511            82.126489      None  \n",
@@ -1214,7 +1244,7 @@
        "[21676 rows x 17 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
